class Block:
    """Represents an element of the tetris board"""

    def __init__(self):
        pass

